--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -65,9 +65,9 @@ $sans-serif: $default-sans-serif !default;
 $sans-serif-narrow: $sans-serif !default;
 $monospace: $default-monospace !default;
 
-$global-font-family: $sans-serif !default;
-$header-font-family: $sans-serif !default;
-$caption-font-family: $serif !default;
+$global-font-family: $Inter !default;
+$header-font-family: $Inter !default;
+$caption-font-family: $Inter !default;
 
 /* type scale */
 $type-size-1: 2.441em !default; // ~39.056px
