--- a/_includes/team.html
+++ b/_includes/team.html
@@ -31,6 +31,11 @@
   padding: 1.5rem;
   text-align: center;
 }
+.member-card h3 {
+  margin: 0.5rem 0 0.2rem;
+  color: #222;
+  font-weight: 600;
+}
 .member-card img {
   width: 100px;
   height: 100px;
